tests/fails/arith4.t
import "compiler/liszt"
mesh = LoadMesh("examples/mesh.lmesh")

local t = {}
local r = {}
local vk = liszt_kernel(v)
    var x = r < t
end
mesh.vertices:map(vk)
